# friday-api

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  compose.yaml  justfile
migrations/: 20250108101411_currencies.up.sql  20250108112151_stock.up.sql  20250108123606_prices.up.sql  20250204133205_ms_events.down.sql  20250204133205_ms_events.up.sql  20250213115322_create_prices_table.up.sql  20250213141610_alter_prices.up.sql
rest/friday-api/: bruno.json  currencies.bru  currencies.http  currency.bru  health.http  hello world.bru  monthly_currencies.bru  ms_webhook.bru  prices.bru  prices_get.bru  prices_update.bru  stock.bru  цитата.bru
rest/friday-api/shuttle/: currencies.bru  currencies.http  currency.bru  folder.bru  hello world.bru  hello worls.bru  http-client.env.json  monthly_currencies1.bru  prices.bru  stock.bru  stock.http
src/: currency_service.rs  error.rs  event_processor.rs  lib.rs  main.rs  price_service.rs  synchronizer.rs  utils.rs
src/handlers/: currency.rs  mod.rs  price.rs  stock.rs
src/models/: currency.rs  mod.rs  price.rs  stock.rs  webhooks.rs
src/routes/: health.rs  mod.rs  webhooks.rs
src/routes/api_routes/: currency.rs  mod.rs  price.rs  stock.rs
src/stock_service/: db.rs  mail_client.rs  mod.rs  ms.rs  web_spider.rs
src/stock_service/parser/: carpetland.rs  fancy.rs  fenix.rs  fox.rs  mod.rs  opus.rs  ortgraph.rs  sf.rs  vvk.rs  zefir.rs
src/stock_service/woo/: mod.rs
src/storage/: currency.rs  events.rs  mod.rs  price.rs  stock.rs
src/tg_bot/: calculator.rs  mod.rs  schema.rs
src/tg_bot/price_parser/: fancy.rs  fox.rs  mod.rs  supplier.rs
