[package]
name = "friday-api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "friday-api"

[dependencies]
axum = "0.8"
tower-http = { version = "0.6.2", features = ["trace", "timeout", "cors"] }
http = "1.2.0"
bytes = "1.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.7", features = ["gzip", "json", "cookies"] }
serde = { version = "1.0.210", features = ["derive"] }
shuttle-runtime = "0.55.0"
shuttle-shared-db = { version = "0.55.0", features = ["sqlx", "postgres"] }
tokio = "1.40.0"
tracing = "0.1.40"
imap = "3.0.0-alpha.14"
mail-parser = "0.11.0"
calamine = "0.28.0"
tl = "0.7.8"
regex = "1.10.6"
serde_json = "1.0.135"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
sqlx = { version = "0.8.3", features = ["postgres", "uuid", "chrono"] }
rust-moysklad = "0.1.3"
rust-woocommerce = "0.1.3"
anyhow = "1.0.95"
teloxide = { git = "https://github.com/teloxide/teloxide/", features = [
    "full",
] }
derive_builder = "0.20.2"
tracing-subscriber = "0.3.18"

