[package]
name = "friday-api"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "friday-api"

[dependencies]
axum = "0.8"
tower-http = { version = "0.6", features = ["trace", "timeout", "cors"] }
http = "1.3"
bytes = "1.10"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["gzip", "json", "cookies"] }
serde = { version = "1", features = ["derive"] }
tokio = "1.47"
tracing = "0.1"
imap = "3.0.0-alpha.9"
mail-parser = "0.11"
calamine = "0.29"
tl = "0.7"
regex = "1.11"
serde_json = "1"
uuid = { version = "1.17", features = ["serde", "v4"] }
sqlx = { version = "0.8", features = ["postgres", "uuid", "chrono"] }
rust-moysklad = "0.1.3"
rust-woocommerce = "0.1.3"
anyhow = "1"
teloxide = { git = "https://github.com/teloxide/teloxide/", features = [
    "full",
] }
derive_builder = "0.20"
tracing-subscriber = "0.3"
